<resources>
    <string name="a_few_more_to_unlock">%1$d more taps to go!</string>
    <string name="a_few_more_to_unlock_one">1 more tap to go!</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="action_clear_db">Clear DB</string>
    <string name="action_compose_message">Compose message</string>
    <string name="action_notification_access">Notification access</string>
    <string name="action_send_feedback">Send Feedback</string>
    <string name="action_settings">Settings</string>
    <string name="action_take_photo">Take photo</string>
    <string name="action_toggle_swipe">Toggle Swipe</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="app_name">Snowball</string>
    <string name="build_type">release</string>
    <string name="clear_all">Clear all</string>
    <string name="com_mixpanel_android_close">Close</string>
    <string name="com_mixpanel_android_done">Done</string>
    <string name="com_mixpanel_android_exit">Exit</string>
    <string name="com_mixpanel_android_logo">By Mixpanel</string>
    <string name="com_mixpanel_android_next">Next question</string>
    <string name="com_mixpanel_android_notification_image">Image not displayed</string>
    <string name="com_mixpanel_android_previous">Previous question</string>
    <string name="debug_unlocked_success">Hooray! Debug mode unlocked!</string>
    <string name="drag_to_reorder">Drag to reorder</string>
    <string name="dummy_message_four">Happy Snowballing!</string>
    <string name="dummy_message_one">"Welcome to Snowball! You'll see new messages from all your social apps here."</string>
    <string name="dummy_message_three">Have any feedback or questions? Tap here to send us a message!</string>
    <string name="dummy_message_two">Yes, welcome! BTW - You can swipe a message to make it disappear.</string>
    <string name="dummy_person_four">the Snowball team</string>
    <string name="dummy_person_one">Janey Drake</string>
    <string name="dummy_person_three">Lauren Michaelson</string>
    <string name="dummy_person_two">Valentina Green</string>
    <string name="entry_of_from">${sender}</string>
    <string name="entry_of_from_group">${group}</string>
    <string name="entry_of_group_add_member">${sender}: invited ${member} to the group</string>
    <string name="entry_of_group_edit_name">"${sender}: changed the group's name"</string>
    <string name="entry_of_group_edit_photo">"${sender}: changed the group's photo"</string>
    <string name="entry_of_group_invited_you">${sender}: invited you to the group</string>
    <string name="entry_of_group_invited_you_and_sentmsg">${sender}: invited you to the group and sent a message</string>
    <string name="entry_of_group_kick_member">${sender}: removed ${member} from the group</string>
    <string name="entry_of_group_kick_you">${sender}: removed you from the group</string>
    <string name="entry_of_group_member_left">${sender}: left the group</string>
    <string name="entry_of_group_message_audio">${sender}: sent an audio message</string>
    <string name="entry_of_group_message_contact">${sender}: sent a contact</string>
    <string name="entry_of_group_message_document">${sender}: sent a document</string>
    <string name="entry_of_group_message_liked_photo">${sender}: liked your photo</string>
    <string name="entry_of_group_message_map">${sender}: shared a location</string>
    <string name="entry_of_group_message_notext">${sender}: sent a message</string>
    <string name="entry_of_group_message_photo">${sender}: sent a photo</string>
    <string name="entry_of_group_message_sticker">${sender}: sent a sticker</string>
    <string name="entry_of_group_message_text">${sender}: ${message}</string>
    <string name="entry_of_group_message_video">${sender}: sent a video</string>
    <string name="entry_of_group_message_voice_note">${sender}: sent a voice note</string>
    <string name="entry_of_invited_to_group">invited you to the group \"${group}\"</string>
    <string name="entry_of_joined_group">joined the group \"${group}\"</string>
    <string name="entry_of_message_audio">sent an audio message</string>
    <string name="entry_of_message_calendar_appointment">sent a calendar appointment</string>
    <string name="entry_of_message_contact">sent a contact</string>
    <string name="entry_of_message_document">sent a document</string>
    <string name="entry_of_message_favorite">added you as a favorite</string>
    <string name="entry_of_message_file">sent a file</string>
    <string name="entry_of_message_gift">sent a gift</string>
    <string name="entry_of_message_liked_photo">liked your photo</string>
    <string name="entry_of_message_map">shared a location</string>
    <string name="entry_of_message_multimedia">sent a multimedia clip</string>
    <string name="entry_of_message_new_waiting">You have new messages waiting</string>
    <string name="entry_of_message_notext">sent a message</string>
    <string name="entry_of_message_photo">sent a photo</string>
    <string name="entry_of_message_sticker">sent a sticker</string>
    <string name="entry_of_message_text">${message}</string>
    <string name="entry_of_message_video">sent a video</string>
    <string name="entry_of_message_voice_note">sent a voice note</string>
    <string name="give_feedback_button_text">Share feedback</string>
    <string name="give_feedback_description">How can we make Snowball better? Send us your ideas.</string>
    <string name="groupme_entry_of_group_message_liked_location">${sender}: liked your location \"${location}\"</string>
    <string name="groupme_entry_of_group_message_liked_message">${sender}: liked your message \"${message}\"</string>
    <string name="groupme_entry_of_message_addedtogroup">"You've been added to the group \"${group}\" with ${members}"</string>
    <string name="groupme_entry_of_message_liked_location">liked your location \"${location}\"</string>
    <string name="groupme_entry_of_message_liked_message">liked your message \"${message}\"</string>
    <string name="header_apps">Apps</string>
    <string name="header_debug">Debug</string>
    <string name="header_general">General</string>
    <string name="header_permissions">Permissions</string>
    <string name="header_privacy">Privacy</string>
    <string name="header_version">Version</string>
    <string name="hike_entry_of_message_favorite_request_details">you can now see my last seen and status updates</string>
    <string name="hike_entry_of_message_friend_request">added you as a friend</string>
    <string name="hike_entry_of_message_friend_request_accepted">you will now start seeing my updates</string>
    <string name="hike_entry_of_message_joined_hike">I just joined Hike!</string>
    <string name="hike_entry_of_message_update">posted an update ${update}</string>
    <string name="inbox_no_messages">No messages. Yet.</string>
    <string name="inbox_no_messages_detail">"When you receive a new message from any of your mobile messaging apps we'll let you know."</string>
    <string name="inbox_no_new_messages">No new messages</string>
    <string name="inbox_thread_collapse">close</string>
    <string name="inbox_thread_expand">%1$d more messages</string>
    <string name="inbox_thread_expand_one">1 more message</string>
    <string name="inbox_welcome_message">Welcome to Snowball!</string>
    <string name="inbox_welcome_message_detail">"Congratulations! You're all setup now.

When you receive messages they'll appear here just like the ones below."</string>
    <string name="kik_entry_of_from_app">Kik</string>
    <string name="kik_entry_of_message_new">You have a new message.</string>
    <string name="kik_entry_of_message_one_unread_conversation">You have 1 conversations with unread messages.</string>
    <string name="kik_entry_of_message_unread_conversations">You received a new message. You have ${unreadCount} conversations with unread messages.</string>
    <string name="lockscreen_inbox_unlock_message">Unlock to see your messages</string>
    <string name="lockscreen_more_messages">+%1$d more messages</string>
    <string name="lockscreen_more_messages_one">+1 more message</string>
    <string name="lockscreen_tap_to_view">Tap to view</string>
    <string name="lockscreen_unlock_to_continue">Unlock to continue</string>
    <string name="migrate_popup_explanation">"Snowball has changed!
Touch here to see what's new."</string>
    <string name="migrate_title">Snowball has a new home!</string>
    <string name="no_give_feedback_button_text">Not now</string>
    <string name="no_review_button_text">No thanks.</string>
    <string name="oob_enable_notification_access">TURN ON SNOWBALL</string>
    <string name="oob_enter_code_explanation">Enter the invite code you received in your email.</string>
    <string name="oob_enter_code_hint">6 character code</string>
    <string name="oob_enter_invite_code">ENTER CODE</string>
    <string name="oob_invite_code_explanation">"Need an invite code?
Request one below."</string>
    <string name="oob_next">NEXT</string>
    <string name="oob_request_invite">REQUEST INVITE</string>
    <string name="oob_submit">SUBMIT</string>
    <string name="oob_tutorial_explanation">"Let's start by showing you how Snowball works!"</string>
    <string name="pull_from_here">Pull from here at any time to see your messages</string>
    <string name="review_button_text">Rate Snowball!</string>
    <string name="review_description">Love Snowball? Please leave us a review in the Play Store!</string>
    <string name="summary_enable_headsup_notification">Show an on-screen notification when you receive a new message</string>
    <string name="summary_enable_left_handed_mode">Pull Snowball from the top left corner instead of the top right corner</string>
    <string name="summary_enable_lock_screen">"Show your latest messages from your messaging apps on your phone's lock screen"</string>
    <string name="summary_enabled_apps">Choose which apps show up in Snowball</string>
    <string name="summary_notification_permission">Enable Android notification access for Snowball to function correctly</string>
    <string name="summary_private_policy">View the Snowball privacy policy</string>
    <string name="summary_quick_launch_apps">Choose app shortcuts to display in Snowball</string>
    <string name="title_build">Build</string>
    <string name="title_enable_headsup_notification">Heads up notification</string>
    <string name="title_enable_left_handed_mode">Left handed mode</string>
    <string name="title_enable_lock_screen">Lock screen</string>
    <string name="title_enabled_apps">Enabled apps</string>
    <string name="title_notification_permission">Notification access</string>
    <string name="title_private_policy">Privacy Policy</string>
    <string name="title_quick_launch_apps">Quick launch apps</string>
</resources>