<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:background="@color/review_background" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/app_review_content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="130.0dip">
            <TextView android:textSize="16.0dip" android:textColor="@color/review_button_text" android:gravity="center" android:id="@+id/review_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/review_description" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:textColor="@color/review_button_text" android:id="@+id/review_no_button" android:background="@drawable/review_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="5.0dip" android:text="@string/no_review_button_text" android:layout_weight="1.0" />
                <Button android:textColor="@color/review_button_text" android:id="@+id/review_yes_button" android:background="@drawable/review_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="10.0dip" android:text="@string/review_button_text" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</merge>