<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/oob_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:paddingLeft="20.0dip" android:paddingTop="20.0dip" android:paddingRight="20.0dip" android:paddingBottom="80.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:src="@drawable/oob_welcome_title" />
        <ImageView android:id="@+id/oob_snowball_video" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="250.0dip" android:layout_margin="20.0dip" android:src="@drawable/oob_welcome_image" android:scaleType="centerInside" android:layout_centerHorizontal="true" />
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="18.0dip" android:textColor="@color/oob_text" android:gravity="center" android:id="@+id/oob_invite_code_explanation" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/oob_invite_code_explanation" android:layout_centerVertical="true" />
            <include android:id="@+id/oob_progress_bar" android:layout_width="@dimen/spinner_dimensions" android:layout_height="@dimen/spinner_dimensions" android:layout_centerHorizontal="true" android:layout_centerVertical="true" layout="@layout/spinner_snowball" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/oob_buttons" android:background="@color/oob_next_background" android:layout_width="fill_parent" android:layout_height="60.0dip" android:text="@string/oob_next" android:layout_alignParentBottom="true">
        <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="@color/oob_next_text" android:gravity="center" android:id="@+id/oob_request_invite_code" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/oob_request_invite" android:layout_weight="1.0" />
        <View android:background="@color/oob_background" android:layout_width="3.0dip" android:layout_height="fill_parent" />
        <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="@color/oob_next_text" android:gravity="center" android:id="@+id/oob_enter_invite_code" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/oob_enter_invite_code" android:layout_weight="1.0" />
    </LinearLayout>
</RelativeLayout>