<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/oob_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:paddingLeft="20.0dip" android:paddingTop="20.0dip" android:paddingRight="20.0dip" android:paddingBottom="80.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:src="@drawable/oob_welcome_title" />
        <ImageView android:id="@+id/oob_snowball_video" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="200.0dip" android:layout_margin="20.0dip" android:src="@drawable/oob_welcome_image" android:scaleType="centerInside" android:layout_centerHorizontal="true" />
        <TextView android:textSize="18.0dip" android:textColor="@color/oob_text" android:gravity="center" android:id="@+id/oob_invite_input_explanation" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/oob_enter_code_explanation" />
        <EditText android:textSize="18.0dip" android:textColor="@color/oob_invite_input_text" android:textColorHint="@color/oob_invite_input_hint" android:gravity="center" android:layout_gravity="center" android:id="@+id/oob_invite_input" android:background="@drawable/oob_edit_text" android:layout_width="260.0dip" android:layout_height="50.0dip" android:layout_marginTop="20.0dip" android:hint="@string/oob_enter_code_hint" android:maxLength="6" android:inputType="textCapCharacters" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/oob_submit" android:background="@color/oob_next_background" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_alignParentBottom="true">
        <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="@color/oob_next_text" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/oob_submit" android:layout_weight="1.0" />
    </LinearLayout>
</RelativeLayout>