<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/empty_inbox"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <FrameLayout
        android:id="@+id/no_new_messages_screen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/no_new_messages_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20.0dip"
            android:layout_marginTop="20.0dip"
            android:text="@string/inbox_no_new_messages"
            android:textColor="@color/no_new_messages"
            android:textSize="20.0dip" />
    </FrameLayout>

    <LinearLayout
        
        android:id="@+id/welcome_screen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inbox_card_0_top_margin"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:visibility="gone" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/card_spacing"
            android:background="@drawable/card_message" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30.0dip"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="30.0dip"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/no_messages_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="10.0dip"
                    android:text="@string/inbox_welcome_message"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="26.0dip" />

                <TextView
                    android:id="@+id/no_messages_body"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20.0dip"
                    android:layout_marginRight="20.0dip"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/inbox_welcome_message_detail"
                    android:textAlignment="center"
                    android:textColor="@color/oob_text"
                    android:textSize="16.0dip" />
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/card_spacing"
            android:background="@drawable/card_message" >

            <include layout="@layout/inbox_entry_empty" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/card_spacing"
            android:background="@drawable/card_message" >

            <include layout="@layout/inbox_entry_empty" />
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>